[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/space_ship2.png" type="Texture" id=1]
[ext_resource path="res://scripts/stats_menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxTexture" id=1]

[node name="StatsMenu" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
light_mask = 8200
margin_right = 1000.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life1" type="Sprite" parent="Panel"]
position = Vector2( 976, 32 )
scale = Vector2( 0.138506, 0.110494 )
texture = ExtResource( 1 )

[node name="Life2" type="Sprite" parent="Panel"]
position = Vector2( 936, 32.5969 )
scale = Vector2( 0.129032, 0.114948 )
texture = ExtResource( 1 )

[node name="Life3" type="Sprite" parent="Panel"]
position = Vector2( 896, 32 )
scale = Vector2( 0.140303, 0.110494 )
texture = ExtResource( 1 )

[node name="Score" type="Label" parent="Panel"]
margin_left = 472.0
margin_top = 16.0
margin_right = 488.0
margin_bottom = 30.0
rect_scale = Vector2( 1.8, 1.8 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Popup" parent="."]
visible = true
margin_left = 468.203
margin_top = 292.473
margin_right = 1084.2
margin_bottom = 545.473
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver"]
modulate = Color( 1, 0.0627451, 0.0627451, 1 )
margin_left = -68.203
margin_top = -68.473
margin_right = 10.797
margin_bottom = -20.473
rect_scale = Vector2( 2.5, 2.5 )
text = "game over

"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameOver"]
modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -100.203
margin_top = -12.473
margin_right = 74.797
margin_bottom = 7.52701
rect_scale = Vector2( 1.5, 1.5 )
text = "press ESC to exit the game"
__meta__ = {
"_edit_use_anchors_": false
}
